crates/filecommand-tui/tests/snapshots/snapshot_views__header_sort_arrows.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: rendered
---
Name
║Name↓        │ Size    Date    Time   ║
Extension
║Name↓        │ Size    Date    Time   ║
Size
║Name         │ Size↓   Date    Time   ║
Time
║Name         │ Size    Date↓   Time   ║
Unsorted
║Name         │ Size    Date    Time   ║
