crates/filecommand-tui/tests/snapshots/snapshot_views__help_window_topic_list.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
assertion_line: 990
expression: text
---
╔═════════ C:\Users\demo\left ═════════╗╔════════ C:\Users\demo\right ═══3:04 PM
║Name↓        │ Size    Date    Time   ║║Name↓        │ Size    Date    Time   ║
║..     ╔════════════════════════════ Help ════════════════════════════╗       ║
║docs   ║                  FileCommand Version 0.1.0                   ║03:0   ║
║Cargo.t║          Copyright (C) 2026 The FileCommand Authors          ║03:0   ║
║readme.║         Inspired by the Norton Commander, 1986-1998          ║03:0   ║
║       ╠──────────────────────────────────────────────────────────────╣       ║
║       ║ About FileCommand                                            ║       ║
║       ║ Keyboard reference                                           ║       ║
║       ║ Panels and display modes                                     ║       ║
║       ║ File operations                                              ║       ║
║       ║ Menus                                                        ║       ║
║       ║ Viewer                                                       ║       ║
║       ║ Editor                                                       ║       ║
║       ║ Command line                                                 ║       ║
║       ║ Modern extras                                                ║       ║
║       ║ Configuration                                                ║       ║
║       ║                                                              ║       ║
║       ╠──────────────────────────────────────────────────────────────╣       ║
║       ║                       Help     Cancel                        ║       ║
║       ╚══════════════════════════════════════════════════════════════╝       ║
╚═══════════ docs  SUB-DIR ════════════╝╚════════════ ..  UP--DIR ═════════════╝
C:\Users\demo\left>_                                                            
1Help 2Menu 3View 4Edit 5Copy 6RenMov 7Mkdir 8Delete 9PullDn 10Quit
