crates/filecommand-tui/tests/snapshots/snapshot_views__info_panel_pending.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: text
---
╔═════════ C:\Users\demo\left ═════════╗╔════════ C:\Users\demo\right ═══3:04 PM
║┌────────────────────────────────────┐║║Name↓        │ Size    Date    Time   ║
║│            FileCommand             │║║..           │ ▶UP--DI                ║
║│           Version 0.1.0            │║║docs         │ ▶SUB-DI 01-02-2 03:0   ║
║│Copyright (C) 2026 The FileCommand A│║║Cargo.toml   │ 612     01-02-2 03:0   ║
║│Inspired by the Norton Commander, 19│║║readme.txt   │ 12K     01-02-2 03:0   ║
║└────────────────────────────────────┘║║                                      ║
║┌─ System ───────────────────────────┐║║                                      ║
║│ Memory free                       …│║║                                      ║
║└────────────────────────────────────┘║║                                      ║
║┌─ Drive C: ─────────────────────────┐║║                                      ║
║│ Volume label                      …│║║                                      ║
║│ Serial number                     …│║║                                      ║
║│ Total space                       …│║║                                      ║
║│ Free space                        …│║║                                      ║
║└────────────────────────────────────┘║║                                      ║
║┌─ Directory ────────────────────────┐║║                                      ║
║│ Files                             …│║║                                      ║
║│ Directories                       …│║║                                      ║
║└────────────────────────────────────┘║║                                      ║
║                                      ║║                                      ║
╚═══════════ docs  SUB-DIR ════════════╝╚════════════ ..  UP--DIR ═════════════╝
C:\Users\demo\left>_                                                            
1Help 2Menu 3View 4Edit 5Copy 6RenMov 7Mkdir 8Delete 9PullDn 10Quit
