crates/filecommand-tui/tests/snapshots/snapshot_views__menu_bar_left_pulldown.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: text
---
  Left     Files     Commands     Options     Right                             
║┌─────────────────────────┐    Time   ║║Name↓        │ Size    Date    Time   ║
║│ Info             Ctrl-L │           ║║..           │ ▶UP--DI                ║
║├─────────────────────────┤2-2 03:0   ║║docs         │ ▶SUB-DI 01-02-2 03:0   ║
║│ Name            Ctrl-F3 │2-2 03:0   ║║Cargo.toml   │ 612     01-02-2 03:0   ║
║│ Extension       Ctrl-F4 │2-2 03:0   ║║readme.txt   │ 12K     01-02-2 03:0   ║
║│ Modif. time     Ctrl-F5 │           ║║                                      ║
║│ Size            Ctrl-F6 │           ║║                                      ║
║│ Unsorted        Ctrl-F7 │           ║║                                      ║
║├─────────────────────────┤           ║║                                      ║
║│ Filter                  │           ║║                                      ║
║│ Re-read          Ctrl-R │           ║║                                      ║
║│ Drive select  Alt-F1/F2 │           ║║                                      ║
║├─────────────────────────┤           ║║                                      ║
║│ New tab          Ctrl-T │           ║║                                      ║
║│ Close tab        Ctrl-W │           ║║                                      ║
║└─────────────────────────┘           ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
╚═══════════ docs  SUB-DIR ════════════╝╚════════════ ..  UP--DIR ═════════════╝
C:\Users\demo\left>_                                                            
1Help 2Menu 3View 4Edit 5Copy 6RenMov 7Mkdir 8Delete 9PullDn 10Quit
