crates/filecommand-tui/tests/snapshots/snapshot_views__menu_bar_no_pulldown.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: text.lines().next().unwrap()
---
  Left     Files     Commands     Options     Right
