crates/filecommand-tui/tests/snapshots/snapshot_views__placeholder_too_small.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: text
---
                                        
                                        
                                        
                                        
                                        
Terminal too small — resize to at least
